# PracticalDeepLearningPython

./: pyproject.toml
chapter_05/: build_mnist.py  cifar10_augment.py  iris_data_augmentation.py  load_bc.py  load_cifar10.py  load_iris.py
chapter_07/: bc_experiments.py  bc_kfold.py  bc_rbf_svm_search.py  iris_experiments.py  mnis.ipynb  mnist_experiments.py  mnist_experiments_results.ipynb
chapter_08/: nn_iris_dataset.py  nn_iris_evaluate.py  nn_iris_mlpclassifier.py
data/breast/: README.txt
data/iris/: README.txt
data/mnist/: mnist_experiments.csv
